<resources>
    <string name="app_name">Room8s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="task_button">task button</string>
    <string name="logo">logo</string>
    <string name="submit">submit</string>
    <string name="next_event">Next Event</string>
    <string name="owed">Owed</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="next_task">Next Task</string>
    <string name="go_to_wallet_screen">Go to wallet screen</string>
    <string name="go_to_chat_screen">Go to chat screen</string>
    <string name="go_to_profile_screen">Go to profile screen</string>
    <string name="go_to_tasks_screen">Go to tasks screen</string>
    <string name="textview">TextView</string>
    <string name="number_of_roommates">Number Of Roommates</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="apartment_name">Apartment Name</string>
    <string name="go_to_login">Go to login</string>
    <string name="menu">menu</string>
    <string name="add_task">add task</string>
    <string name="send_message">Send message</string>
    <string name="enter_message">Enter Message</string>
    <string name="create_apartment">create apartment</string>
    <string name="settings">Settings</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="tell_us">Tell Us</string>
    <string name="leave_room">Leave Room</string>
    <string name="log_out">Log Out</string>
    <string name="Wallet_HL">Wallet</string>
    <string name="total_expenses_txt_view">Total Expenses</string>
    <string name="dept_txt_view">Dept</string>
    <string name="deserve_txt_view">Deserve</string>
    <string name="edit_btn_txt">Edit</string>
    <string name="profile_set_name_txt">Name</string>
    <string name="profile_set_password_txt">Password</string>
    <string name="profile_set_phone_number_txt">Phone Number</string>
    <string name="profile_set_email_txt">Email</string>
    <string name="delete_user">Delete User</string>
    <string name="loading">Loading...</string>
    <string name="you_dont_have_connection">You Dont Have Connection</string>
    <string name="user_name">user name</string>
    <string name="message">message</string>
    <string name="user_icon">User Icon</string>
    <string name="login_button">login button</string>
    <string name="char_bar_btn">char_bar_fab</string>
    <string name="total_expenses_num">sum</string>
    <string name="room8ts">Room8ts</string>
    <string name="types">types</string>
    <string name="dates">dates</string>

</resources>
