<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    tools:context=".fragments.home_page_fragments.HomePageFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.023094688" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_dark_mode"
        app:layout_constraintBottom_toTopOf="@+id/apartment_detail_layout"
        app:layout_constraintDimensionRatio="w,1.16:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.48000002" />

    <LinearLayout
        android:id="@+id/apartment_detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/layout_border_style"

        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/apartment_name" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/apartment_number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/number_of_roommates" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/textview" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:id="@+id/hr_view"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="#BABABA"
        app:layout_constraintBottom_toTopOf="@+id/app_data_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/hr_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apartment_detail_layout">


        <ImageView
            android:id="@+id/go_to_tasks_btn"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/go_to_tasks_screen"

            android:maxWidth="120dp"
            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/tasks_btn"
            app:layout_constraintBottom_toTopOf="@+id/go_to_wallet_btn"
            app:layout_constraintDimensionRatio="w,1.15:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go_to_profile_btn"
            app:layout_constraintTop_toBottomOf="parent" />

        <ImageView
            android:id="@+id/go_to_profile_btn"

            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/go_to_profile_screen"
            android:scaleType="fitCenter"
            android:src="@drawable/profile_btn"
            app:layout_constraintBottom_toTopOf="@+id/go_to_messages_btn"
            app:layout_constraintDimensionRatio="w,1.15:1"
            app:layout_constraintEnd_toStartOf="@+id/go_to_tasks_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <ImageView
            android:id="@+id/go_to_messages_btn"

            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/go_to_chat_screen"
            android:maxWidth="120dp"

            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/messages_btn"
            app:layout_constraintDimensionRatio="w,1.15:1"
            app:layout_constraintEnd_toStartOf="@+id/go_to_wallet_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/go_to_profile_btn" />

        <ImageView
            android:id="@+id/go_to_wallet_btn"

            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"

            android:contentDescription="@string/go_to_wallet_screen"
            android:maxWidth="120dp"
            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/wallet_btn"
            app:layout_constraintDimensionRatio="w,1.15:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/go_to_messages_btn"
            app:layout_constraintTop_toBottomOf="@+id/go_to_tasks_btn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/app_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/layout_border_style"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hr_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/next_task" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/total_expenses" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/owed" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp"
                android:text="@string/next_event" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>