<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fragments.open_app_fragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".fragments.open_app_fragments.SignUpFragment">

        <TextView
            android:id="@+id/register_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_up"
            android:textSize="60sp"
            app:layout_constraintBottom_toTopOf="@+id/register_username_EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_username_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="username"
            android:backgroundTint="@color/edit_text_under_line"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/register_email_EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_TextView" />

        <EditText
            android:id="@+id/register_email_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/edit_text_under_line"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/register_password_EditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_username_EditText" />

        <EditText
            android:id="@+id/register_password_EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:backgroundTint="@color/edit_text_under_line"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/submit_register_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_EditText" />


        <ImageView
            android:id="@+id/submit_register_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/submit"
            android:src="@drawable/btn_img_submit"
            app:layout_constraintBottom_toTopOf="@+id/go_to_login_from_sginup_btn"
            app:layout_constraintDimensionRatio="w,2.87:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_EditText" />

        <ImageView
            android:id="@+id/go_to_login_from_sginup_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/go_to_login"
            android:src="@drawable/btn_img_sign_in"
            app:layout_constraintDimensionRatio="w,2.87:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submit_register_btn"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>