<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:layoutDirection="ltr"
    tools:context=".fragments.message_fragments.ChatFragment">

    <TextView
        android:id="@+id/apartment_name_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/apartment_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/messages_RecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messages_RecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_layout_border_gray"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/enter_message_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apartment_name_TextView" />

    <EditText
        android:id="@+id/enter_message_EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="19dp"
        android:hint="@string/enter_message"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/send_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/send_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@string/send_message"
        android:src="@drawable/btn_img_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>